objects/MagicianType__mdt/MagicianType__mdt.object-meta.xml
<CustomObject>
    <label>MagicianType</label>
    <pluralLabel>MagicianTypes</pluralLabel>
</CustomObject>