objects/MagicianType__mdt/fields/AllowsSpells__c.field-meta.xml
<CustomField>
    <fullName>AllowsSpells__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowsSpells</label>
    <type>Checkbox</type>
</CustomField>