objects/MagicianType__mdt/fields/BuildPoints__c.field-meta.xml
<CustomField>
    <fullName>BuildPoints__c</fullName>
    <label>BuildPoints</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>