objects/MagicianType__mdt/fields/ForcePoints__c.field-meta.xml
<CustomField>
    <fullName>ForcePoints__c</fullName>
    <label>ForcePoints</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>