objects/MagicianType__mdt/fields/List_Order__c.field-meta.xml
<CustomField>
    <fullName>List_Order__c</fullName>
    <label>List_Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>