objects/MagicianType__mdt/fields/RequiresSpellBonus__c.field-meta.xml
<CustomField>
    <fullName>RequiresSpellBonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequiresSpellBonus</label>
    <type>Checkbox</type>
</CustomField>