objects/MagicianType__mdt/fields/SpecialOptions__c.field-meta.xml
<CustomField>
    <fullName>SpecialOptions__c</fullName>
    <label>SpecialOptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>