objects/MagicianType__mdt/fields/TraditionOptions__c.field-meta.xml
<CustomField>
    <fullName>TraditionOptions__c</fullName>
    <label>TraditionOptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>